# enum-toggles-rs

./: .pre-commit-config.yaml  .releaserc.json  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: release.yml  rust.yml
benches/: bench.rs
src/: lib.rs
