[package]
name = "enum-toggles"
version = "0.1.0"
edition = "2021"
authors = ["Jxtopher"]
description = "A generic Rust library for managing toggles/flags using enums and bitvec."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jxtopher/enum-toggles-rs"
keywords = ["feature", "toggle", "enum", "bitvec", "flags"]
categories = ["data-structures", "config", "rust-patterns"]

[lib]
name = "enum_toggles"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
bitvec = "1.0"
strum = "0.26"
strum_macros = "0.26"
log = "0.4"

[dev-dependencies]
tempfile = "3.10"
