[package]
name = "enum-toggles"
version = "1.1.0"
edition = "2021"
authors = ["Jxtopher"]
description = "A generic Rust library for managing toggles/flags using enums and bitvec."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jxtopher/enum-toggles-rs"
keywords = ["feature", "toggle", "enum", "bitvec", "flags"]
categories = ["data-structures", "config", "rust-patterns"]

[lib]
name = "enum_toggles"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
bitvec = "1.0"
log = "0.4"
strum = "0.27.1"
strum_macros = "0.27.1"
yaml-rust = "0.4.5"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
once_cell = "1.21.3"
tempfile = "3.10"

[[bench]]
name = "bench"
harness = false
